# PSLG-Obtuse-Triangle-Minimization-V1-2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ex.cpp  exToDeleteLater.cpp  input.json  input_ant.json  input_sa.json  output.json  output_sa.json  polyg  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h
includes/: CMakeLists.txt  Makefile  cmake_install.cmake
outputs/: output.json  output_ant.json  output_instance_1.json  output_sa.json  output_temp.json  output_test_intances_instance_test_1.json  output_test_intances_instance_test_10.json  output_test_intances_instance_test_11.json  output_test_intances_instance_test_12.json  output_test_intances_instance_test_13.json  output_test_intances_instance_test_15.json  output_test_intances_instance_test_16.json  output_test_intances_instance_test_2.json  output_test_intances_instance_test_3.json  output_test_intances_instance_test_4.json  output_test_intances_instance_test_5.json  output_test_intances_instance_test_6.json  output_test_intances_instance_test_7.json  output_test_intances_instance_test_8.json  output_test_intances_instance_test_9.json  output_tests_instance_6.json
test_instances_sa/: instance_test_10.json  instance_test_11.json  instance_test_14.json  instance_test_15.json  instance_test_2.json  instance_test_3.json  instance_test_7.json  instance_test_8.json  instance_test_9.json
tests_ant/: instance_1.json  instance_2.json
tests_sa/: instance_1.json  instance_2.json  instance_3.json  instance_4.json  (+3 more)
(+41 files in other folders)
